@@ -1,3 +1,9 @@
+2007-06-02  Abel Cheung  <abelcheung@gmail.com>
+
+	* hk2tw.pl, tw2hk.pl: Now accepts special file header comment
+	which can globally convert certain word. Translator will not
+	be prompted anymore for that particular word.
+
 2007-05-23  Abel Cheung  <abelcheung@gmail.com>
 
 	* hk2tw.pl, tw2hk.pl: Yet another set of change from Ambrose Li.
